--- a/src/components/pages/Publish/PublishForm.module.css
+++ b/src/components/pages/Publish/PublishForm.module.css
@@ -1,5 +1,6 @@
 .form {
   composes: box from '../../atoms/Box.module.css';
+  margin-bottom: var(--spacer);
 }
 
 .actions {
